--- a/src/app/background-carousel/background-carousel.component.scss
+++ b/src/app/background-carousel/background-carousel.component.scss
@@ -27,7 +27,7 @@
 
 .arrow-button {
     position: absolute;
-    top: 50%;
+    top: 16px;
     background-color: rgba(0, 0, 0, 0.5);
     border: none;
     color: white;
